# fartlek

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.claude/agents/: coach-advisor.md
.github/workflows/: ci.yml
backend/: cli.py  config.py  db.py  ics.py  main.py  models.py  plan_export.py  schemas.py
backend/analysis/: best_efforts.py  decoupling.py  gap.py  metrics.py  pace_zones.py  plan_projection.py  prediction.py  relative_effort.py  spikes.py  splits.py  training_load.py  workout_naming.py  zones.py
backend/api/: activities.py  coach.py  notes.py  plan.py  races.py  settings.py  sync.py  trends.py  wellness.py
backend/sync/: backup.py  garmin.py  gcal.py  importer.py  scheduler.py  service.py  weather.py  (+1 more)
docs/: endurance-training-science-review.html  endurance-training-science-review.md  endurance-training-science-review_citation_report.json  sports-nutrition-review.md  sports-nutrition-review_citation_report.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: api  db  install-service-macos.sh  install-service.ps1  install-service.sh
systemd/: fartlek.service
tests/: conftest.py  test_api.py  test_backup.py  test_best_efforts.py  test_coach.py  test_coach_scripts.py  test_decoupling.py  test_gap.py  test_gcal.py  test_metrics.py  test_pace_zones.py  test_plan_projection.py  test_prediction.py  test_relative_effort.py  test_rtss_gap_toggle.py  test_self_eval.py  test_spikes.py  test_splits.py  test_splits_api.py  test_training_load.py  test_weather.py  test_workout_naming.py
(+37 files in other folders)
