[project]
name = "fartlek"
version = "0.1.0"
description = "Fartlek — local training log with Garmin Connect sync, fitness trends and Claude Code integration"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "garminconnect>=0.2.25",
    "garth>=0.5",
    "fitdecode>=0.10",
    "apscheduler>=3.10,<4",
    "requests>=2.31",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx2>=2.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
package = false
